[package]
name = "broker-etrade"
version = "0.8.8"
edition = "2021"
description = "E*TRADE (Morgan Stanley) broker plugin for KL Investment"

# Independent workspace for WASM-only build
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
plugin_api = { path = "../../crates/plugin_api" }
models = { path = "../../crates/models" }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
base64 = "0.22"
hmac = "0.12"
sha1 = "0.10"
rand = "0.8"
